Show contact photo in contact card view.
- Unopened contact record, we send the attachment number of the contact photo
 from the server-side in then list request
- In a contact card view check record is already opened then check and find
 the contact photo from attachments and use the getInlineImageUrl
 function to generate the URL for it.
- For the unopened record check record has grater then -1 as
 a value of contact_photo_attach_num property then use
 it to generate image URL.
- And if contact is unopened and contact_photo_attach_num has -1
 value then show simple initials.

Reference: KW-3673

--- a/client/resources/scss/components/_contacts.scss
+++ b/client/resources/scss/components/_contacts.scss
@@ -75,6 +75,18 @@
 			font-size: 30px;
 			user-select: none;
 		}
+
+    .k-contact_cardview_photo {
+      width: 76px;
+      height: 76px;
+      float: right;
+      margin-right: 20px;
+      img {
+        width: inherit;
+        height: inherit;
+        border-radius: 50%;
+      }
+    }
 	}
 	
 	/* Buttons to switched between contacts */
