--- a/client/resources/scss/components/_preview_panel.scss
+++ b/client/resources/scss/components/_preview_panel.scss
@@ -183,7 +183,7 @@ $preview-header-collapse-icon-height	: 5;
 	margin-right: 7px;
 	text-align: center;
 	width: 40px;
-	font-size: 18px !important;
+	height: 40px;
 	@include basefont($font-size-extra-large);
 	float: left;
 	user-select: none;
