Add height fixed height to sender initial
Reference: KW-3710

--- a/client/resources/scss/components/_popups.scss
+++ b/client/resources/scss/components/_popups.scss
@@ -473,8 +473,9 @@
 	/* Initials */
 	.preview-header-sender-initial {
 		width: 55px;
+		height: 55px;
 		line-height: 55px;
-		font-size: 24px !important;
+		font-size: 24px;
 	}
 
 	.preview-header-sender-image {
