Set print page margin
set the print page margin to 1.3cm

Reference KW-3731

--- a/client/resources/scss/external/_print.scss
+++ b/client/resources/scss/external/_print.scss
@@ -2,8 +2,7 @@
 @page
 {
     size: auto; /* auto is the initial value */
-    margin: 0.5cm;
-
+    margin: 1.3cm;
 }
 
 @media print {
@@ -20,13 +19,18 @@
 }
 
 /* common css to make some tags clear on paper */
-html,div,dl,dt,dd,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,p,blockquote,th,td {
+body,html,div,dl,dt,dd,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,p,blockquote,th,td {
 	margin: 0;
 	padding: 0;
 }
 
-img,html {
+img,body,html {
 	border: 0;
+}
+
+html, body{
+    height: 100%;
+    width: 100%;
 }
 
 address,caption,cite,code,dfn,th,var {
