Strip down the appointment height by 2 px
strip down the appointment height by 2 px and
use line-height to 1.5 instead of 23px to
center align appointment title.

Reference: KW-3765

--- a/client/resources/scss/components/_calendar.scss
+++ b/client/resources/scss/components/_calendar.scss
@@ -299,7 +299,7 @@ $calendar-tab-height: 30px;
 	}
 
 	.k-title {
-		line-height: $font-default-line-height + 3;
+		line-height: 1.5;
 		max-height: 100%;
 		max-width: 100%;
 		overflow: hidden;
